# FlappyUrho

./: License.txt  README.md
DataSrc/: Environment.txt  Pipe.blend  Ufo.blend
Engine/: CloneRepo.bat
GameSrc/: BarrierLogic.cpp  BarrierLogic.h  CMakeLists.txt  CameraLogic.cpp  CameraLogic.h  EnvironmentLogic.cpp  EnvironmentLogic.h  Game.cpp  Global.cpp  Global.h  UfoLogic.cpp  UfoLogic.h  Urho3DAll.h
Result/GameData/Materials/: Env.xml  Pipe.xml  UfoBody.xml  UfoEngine.xml  UfoGlass.xml  UfoLight.xml
Result/GameData/Models/: Fly.ani  Pipe.mdl  Pipe.txt  Ufo.mdl  Ufo.txt
